--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>rs_bot_base</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The rs_bot_base package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="swarmlab@todo.todo">swarmlab</maintainer>
+  <maintainer email="robert@stevens.tk">Robert Stevens</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -40,10 +40,10 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
+	<!-- <build_depend>roscpp</build_depend> -->
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <run_depend>roscpp</run_depend>
+	<!-- <run_depend>roscpp</run_depend> -->
   <run_depend>rospy</run_depend>
   
 
